# healthcli

./: .gitignore  Cargo.toml  LICENSE  README.md  health_checks.json
.github/workflows/: ci.yaml  docs.yaml
src/: main.rs
src/commands/: check.rs  list.rs  mod.rs  register.rs
src/models/: health_check.rs  mod.rs
src/storage/: mod.rs
tests/: cli.rs
