[package]
name = "healthcli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
sys-info = "0.9.1"
colored = "2.1.0"

